# A-B-Testing-Framework

./: .gitignore  CASE_STUDY.md  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
mlflow_tracking/: log_experiment.py
notebooks/: ab_test_showcase.py  cookie_cats_ab_test.ipynb
src/: __init__.py  causal_validation.py  data_simulation.py  diagnostics.py  experiment_decision.py  experiment_design.py  heterogeneous_effects.py  reporting.py  sensitivity.py  sequential_testing.py  statistical_tests.py
src/templates/: report_template.html
tests/: conftest.py  test_causal_validation.py  test_data_simulation.py  test_diagnostics.py  test_experiment_decision.py  test_experiment_design.py  test_heterogeneous_effects.py  test_mlflow_tracking.py  test_reporting.py  test_sensitivity.py  test_sequential_testing.py  test_statistical_tests.py
